@@ -1,5 +1,9 @@
 2007-10-18  Lillian Angel  <langel@redhat.com>
 
+	* Makefile.am (OPENJDK_SOURCEPATH_DIRS): Added CORBA sources.
+
+2007-10-18  Lillian Angel  <langel@redhat.com>
+
 	* README: Updated.
 
 2007-10-16  Francis Kung  <fkung@redhat.com>
